--- a/templates/labs/view_labs.html
+++ b/templates/labs/view_labs.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Список лабораторних - NULP 2024</title>
+
+    <script src="{{ url_for('static', filename='js/lab/delete_lab.js') }}" defer></script>
 </head>
 <body>
 
 <h1>Лабораторні роботи для предмету {{ subject.title }}</h1>
 <ul>
     {% for lab in labs %}
-    <li>{{ lab.name }} - {{ lab.received_points }} / {{ lab.max_points }}</li>
+    <li>
+        {{ lab.name }} - {{ lab.received_points }} / {{ lab.max_points }}
+        <a href="{{ url_for('labs.edit_lab', lab_id=lab.id) }}">✏️ Редагувати</a>
+        <button onclick="confirmDeleteLab({{ lab.id }})">Видалити</button>
+    </li>
     {% endfor %}
 </ul>
 <a href="{{ url_for('labs.create_lab', subject_id=subject.id) }}">Додати лабораторну</a>
